@@ -1,3 +1,7 @@
+2006-11-01  Titus Brown  <t@localhost.localdomain>
+
+	* Fixed bug in mechanize/_html.py links parsing.
+
 2006-10-26  Titus Brown  <t@localhost.localdomain>
 
 	* Added TWILL_TEST_PORT in for running tests on something other
